--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,6 @@
-pip install streamlit
-pip install pandas
-pip install numpy
-pip install altair
-pip install seaborn
-pip install matplotlib
+streamlit
+pandas
+numpy
+altair
+seaborn
+matplotlib
